# meso-lts

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.py  build.sh  clear.py  compress.sh  main.cpp  main.h  pack.py
files/: case-kn0.075.txt  case-kn1.txt  case-neumann.txt  case-re1000.txt  case-re400-3d.txt  case-re400.txt  case.txt  cavity.neu  cavity.pw  demo.check_point  gh-3.dvs  hGH.dvs  nc.dvs
files/config/: cavity.txt  micro_cavity.txt
files/mesh/: cavity.su2  cavity_40x40.su2  cavity_hybrid.su2  circle.su2  dvs_100x100.su2
files/neumann/: neumann_dvs.neu  neumann_phy.neu
files/scripts/: gauss_hermite.py  hGH.py  para.py  para_nodim.py
include/: meso.h
include/core/: README.md  core.h  logger.h  math.h  mesompi.h  type_def.h
include/mesh/: geom.h  mesh.h  object.h  reader.h
include/meso/: demo.h  exec.h
include/solver/: README.md  boundary.h  config.h  solver.h
include/solver/boltzmann/: cdugks.h  cdugks_shakhov.h
include/solver/dvs/: dvs_reader.h
script/: plt2check_point.py
src/api/: CMakeLists.txt  README.md  console.cpp
src/core/: CMakeLists.txt  README.md  argparser.cpp  core.cpp  fileReader.cpp  file_reader.cpp  logger.cpp  mesomath.cpp  mpi.cpp  mpiBcast.cpp  mpiDataType.cpp  mpiRecv.cpp  mpiSend.cpp  reader.cpp  timeControl.cpp  utils.cpp  vector.cpp
src/core/math/: matrix.cpp  vector.cpp
src/core/mesomath/: mat3d.cpp  rotate3d.cpp  vec3d.cpp
src/core/mesompi/: mpi.cpp
src/field/: fieldFileIO.cpp  fieldFvMesh.cpp  fieldFvMeshMPI.cpp  fieldInterfaces.cpp  fieldObject.cpp
src/include/: api.h  core.h  mesh.h  meso.h  sample.h  solver.h  test.h
src/include/api/: console.tpp
src/include/core/: argparser.h  core.h  core_utils.h  fileReader.h  logger.h  macro.h  math.h  mesomath.h  mesompi.h  reader.h  timeControl.h  typeDefine.h  utils.h
src/include/field/: field.h  fieldConstructors.h  fieldInterfaces.h  fieldMath.h  fieldMathFunctions.h  fieldObject.h  fvMeshField.h
src/include/include/: mesoFinalize.h  mesoHelp.h  mesoInit.h
src/include/mesh/: dpm_object.h  mesh.h  meshBoundary.h  meshFvMeshReader.h  meshGeomMeshReader.h  meshGeometric.h  mesh_boundary.h  mesh_generator.h  mesh_geom.h  mesh_object.h  mesh_reader.h  mesh_writer.h  neu_reader.h  object.h  reader.h
src/include/solver/: basic_solver.h  boundary.h  check_point.h  config.h  config_reader.h  numerical.h  solver.h
src/include/solver/boltzmann/: cdugks.h  cdugks_incompressible.h  cdugks_shakhov.h  dugks.h  dugks_incompressible.h  dugks_nc.h  dugks_shakhov.h  gks.h
src/include/solver/dugks/: dugks_incompressible.h
src/include/solver/dvs/: dvs_reader.h
src/include/solver/navier-stokes/: simple_incompressible.h
src/include/solver/simple/: simple_incompressible.h
src/mesh/: CMakeLists.txt  README.md  basicObject.cpp  fvMeshCell.cpp  fvMeshFace.cpp  fvMeshFileIO.cpp  fvMeshFvMesh.cpp  fvMeshGenerateFace.cpp  fvMeshGeomMesh.cpp  fvMeshGeometric.cpp  fvMeshNode.cpp  fvMeshPatch.cpp  fvMeshZone.cpp  geom.cpp  mesh.cpp  mesh_build.cpp  mesh_geom.cpp  mesh_numerical.cpp  mesh_object.cpp  mesh_output.cpp  mesh_reader.cpp  mesh_writer.cpp  metis.cpp  neu_parse.cpp  object.cpp  reader.cpp
src/mesh/dpm/: dpm_geom.cpp  dpm_object.cpp
src/mesh/mesh_generator/: gauss_hermit.cpp  newton_cotes.cpp
src/mesh/mesh_reader/: neu_parse.cpp.bak  su2_parse.cpp
src/meso/: CMakeLists.txt  demo.cpp  exec.cpp  main.cpp
src/sample/: vector_test.cpp
src/solver/: CMakeLists.txt  README.md  basic_solver.cpp  cdugks.cpp  check_point.cpp  config.cpp  config_reader.cpp  field.cpp  limiter.cpp  numerical.cpp  solverBasicObject.cpp
src/solver/boltzmann/: cdugks.cpp  cdugks.omp-only.backup  cdugks_incompressible.cpp  cdugks_shakhov.cpp  dugks.cpp  dugks_incompressible.cpp  dugks_shakhov.cpp  gks.cpp
src/solver/boundary/: compressible.cpp  patch.cpp  pressure_boundary.cpp  slip_wall.cpp
src/solver/dugks/: dugks_incompressible.cpp
src/solver/dvs/: dvs_generator.cpp  dvs_mpi.cpp  gauss_hermite.cpp  newton_cotes.cpp
src/solver/test/: test.cpp
